# rp4-telemetry

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  README.md
src/: can.c  can.h  log.c  lora.c  main.c  main.cpp  rs485.c  serial.c  serial.h  watchdog.c
src/flatbuffers/: telemetry-data_builder.h  telemetry-data_reader.h  telemetry-data_verifier.h  ts_data.fbs
src/threads/: watchdog.c  watchdog.h
src/threads/peripherals/: can.c  can.cpp  can.h  can.hpp  csv.cpp  csv.hpp  gps.c  gps.cpp  gps.h  gps.hpp  lora.c  lora.cpp  lora.h  lora.hpp  rs485.c  rs485.cpp  rs485.h  rs485.hpp
src/utils/: data.c  data.cpp  data.h  data.hpp  log.cpp  log.hpp  log_paths.cpp  log_paths.hpp  serial.c  serial.h  serial_port.cpp  serial_port.hpp  status.cpp  status.hpp  ts_data.def
src/utils/proto/: capnp_c.h  ts_data.capnp  ts_data.capnp.c  ts_data.capnp.h
src/utils/rs485_parser/: README.md  hmi_parser.hpp  hmi_parser_demo.cpp  indexed_type_map.hpp  struct_fields.hpp  utils.hpp
src/utils/rtc_watchdog/: DEV_Config.c  DEV_Config.h  DS3231.c  DS3231.h  Debug.h  dev_hardware_UART.c  dev_hardware_UART.h  dev_hardware_i2c.c  dev_hardware_i2c.h  sysfs_gpio.c  sysfs_gpio.h
